Re-add some tests for unprintable but also invalid chars. Apparently Qt's XML classes don't properly check for invalid chars when writing XML, even if you tell them to.

Also switch to QXmlStreamWriter, as apparently going forward it is the more supported class.

BUG: 251762